# cpp_labs

./: README.md
arcanoid/: CMakeLists.txt  README.md  main.cpp
arcanoid/include/: Ball.hpp  Block.hpp  Bonus.hpp  Game.hpp  GameObject.hpp  Paddle.hpp  ResourceManager.hpp
arcanoid/src/: Ball.cpp  Block.cpp  Bonus.cpp  Game.cpp  GameObject.cpp  Paddle.cpp
gems/: CMakeLists.txt  README.md
gems/include/: Bonus.hpp  Game.hpp  Gem.hpp  Grid.hpp
gems/src/: Bonus.cpp  Game.cpp  Gem.cpp  Grid.cpp  main.cpp
lab1/: CMakeLists.txt  README.md  main.cpp  parser.cpp  parser.hpp  quadratic_solver.cpp  quadratic_solver.hpp  test.cpp
lab2/: CMakeLists.txt  README.md  email.hpp  equations.txt  exam.cpp  exam.hpp  main.cpp  parser.cpp  parser.hpp  quadratic_solver.cpp  quadratic_solver.hpp  solver.cpp  solver.hpp  students.cpp  students.hpp  teacher.cpp  teacher.hpp
